--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Julian Popescu <jpopesculian@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rlua = "0.16"
 rlua_serde = "0.3"
@@ -14,3 +12,10 @@ serde = { version = "1.0", features = ["derive"] }
 base64 = "0.10"
 ring = "0.14"
 untrusted = "0.6"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "benches"
+harness = false
