--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 base64 = "0.10"
 ring = "0.14"
 untrusted = "0.6"
+lazy_static = "1.3"
 
 [dev-dependencies]
 criterion = "0.2"
