--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 base64 = "0.10"
 ring = "0.14"
 untrusted = "0.6"
+hashbrown = "0.6"
 
 [dev-dependencies]
 criterion = "0.2"
