--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lua/zencode"]
 	path = lua/zencode
-	url = git@github.com:riddleandcode/zencode-core
+	url = https://github.com/riddleandcode/zencode-core.git
