--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-   
+
     steps:
     - uses: actions/checkout@v1
       with:
@@ -17,18 +17,21 @@ jobs:
         sudo apt-get install musl-tools
         rustup target add x86_64-unknown-linux-musl
         rustup component add rustfmt
-  
+
     - name: Check Format
       run: cargo fmt -- --check
-      
+
     - name: Build
       run: make build
 
     - name: Test
       run: make test
-  
+
     - name: Build musl
       run: make musl
-  
+
     - name: Test musl
       run: make musl-test
+
+    - name: Docker
+      run: make docker
