--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Setup
       run: |
-        sudo apt-get install musl-tools
+        sudo apt-get install -y musl-tools
         rustup target add x86_64-unknown-linux-musl
         rustup component add rustfmt
         curl -fssl https://raw.githubusercontent.com/SconeDocs/SH/master/install_docker.sh | bash
